--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Valentine’s Day ❤️</title>
+  <title>Feliz dia de San Valentín❤️</title>
   <style>
     body {
       margin: 0;
@@ -54,17 +54,17 @@
 
   <div class="card">
     <div class="heart">❤️</div>
-    <h1>Happy Valentine’s Day!</h1>
+    <h1>!Feliz día de San Valentín mi amor!</h1>
     <p>
-      To my favorite person in the world,<br><br>
-      Thank you for making every day brighter and every moment sweeter.
-      This little card is just a small reminder of how much you mean to me.
+      Para una personita muy especial que me gusta tanto rawr 🐅,<br><br>
+      Gracias por hacerme sentir tan bonito todos los días, tenía muchas ganas de darte este detalle desde hace tiempo,
+      en verdad que me encantas mucho, te amo mucho más allá del cielo y disfruto mucho compartir contigo cada detalle de mi vida, te adoro muchísimo
     </p>
 
-    <p><strong>I love you today and always 💕</strong></p>
+    <p><strong>Te amo demasiado 💕</strong></p>
 
     <footer>
-      — From: Your Secret Admirer 😘
+      — De: Tu admirador número #1 😘
     </footer>
   </div>
 
