--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
 
   <div class="card">
     <div class="heart">❤️</div>
-    <h1>!Feliz día de San Valentín mi amor!</h1>
+    <h1>Feliz día de San Valentín, mi amor :)</h1>
     <p>
-      Para una personita muy especial que me gusta tanto rawr 🐅,<br><br>
+      Para una personita muy especial que me gusta tanto rawr 🐅.<br><br>
       Gracias por hacerme sentir tan bonito todos los días, tenía muchas ganas de darte este detalle desde hace tiempo,
-      en verdad que me encantas mucho, te amo mucho más allá del cielo y disfruto mucho compartir contigo cada detalle de mi vida, te adoro muchísimo
+      en verdad que me encantas mucho, te amo mucho más allá del cielo y disfruto un montón compartir contigo cada detalle de mi vida, me llenas el alma de pura luz.
     </p>
 
     <p><strong>Te amo demasiado 💕</strong></p>
 
     <footer>
-      — De: Tu admirador número #1 😘
+      — Tu admirador número #1 😘
     </footer>
   </div>
 
